--- a/IcarusDroneServices/MainWindow.xaml
+++ b/IcarusDroneServices/MainWindow.xaml
@@ -1,12 +1,159 @@
 ﻿<Window x:Class="IcarusDroneServices.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IcarusDroneServices"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        xmlns:wpfx="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Height="780" Width="1280" AllowsTransparency="True" WindowStyle="None"
+        WindowStartupLocation="CenterScreen" Background="Transparent">
+    
+    <Border CornerRadius="25" Padding="20" Background="#efefef">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-    </Grid>
+            <!-- Left Panel: Logo + Add Drone Details Form -->
+            <Border Grid.RowSpan="3" CornerRadius="25">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#cddee5" Offset="0" />
+                        <GradientStop Color="#9ebecb" Offset="0.8"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+
+                <StackPanel>
+                    <!-- Logo and Company Name -->
+                    <StackPanel HorizontalAlignment="Center" Margin="0 30 0 10">
+                        <TextBlock Text="Icarus Pty Ltd" FontSize="36" Foreground="#312f2f" FontFamily="Century Gothic" FontWeight="Bold" HorizontalAlignment="Center" />
+                        <TextBlock Text="Drone Management Services" FontSize="20" Foreground="#312f2f" FontFamily="Century Gothic" FontWeight="Thin" HorizontalAlignment="Center" FontStyle="Italic"/>
+                    </StackPanel>
+
+                    <!-- Drone Details Form-->
+                    <TextBlock Text="Service Form" FontSize="24" FontWeight="Bold" Margin="30 40 0 20" Foreground="#312f2f" HorizontalAlignment="Left"/>
+                    <!--Service Tag-->
+                    <TextBlock Text="Service Tag" FontSize="14" Margin="35 0 35 0" FontFamily="Century Gothic" FontStyle="Italic"/>
+                    <Border BorderThickness="2" BorderBrush="#7296a4" Margin="35 0 35 0" Height="40" VerticalAlignment="Center">
+                        <wpfx:IntegerUpDown x:Name="txtServiceTag" Padding="10 0 0 0" VerticalAlignment="Center" FontSize="16" Background="Transparent" Height="40" TextAlignment="Left"
+                                            FontFamily="Century Gothic" HorizontalAlignment="Center" Width="225" BorderThickness="0" FormatString="N0" Value="100" Increment="10"/>
+                    </Border>
+                    <!--Client Name-->
+                    <TextBlock Text="Client Name" FontSize="14" Margin="35 10 35 0" FontFamily="Century Gothic" FontStyle="Italic"/>
+                    <Border BorderThickness="2" BorderBrush="#7296a4" Margin="35 0 35 0" Height="40" VerticalAlignment="Center">
+                        <TextBox x:Name="txtClientName" Padding="10 0 10 0" VerticalAlignment="Center" FontSize="16" Background="Transparent"
+                                   FontFamily="Century Gothic" HorizontalAlignment="Left" Width="280" BorderThickness="0"/>
+                    </Border>
+                    <!-- Drone Model-->
+                    <TextBlock Text="Drone Model" FontSize="14" Margin="35 10 35 0" FontFamily="Century Gothic" FontStyle="Italic"/>
+                    <Border BorderThickness="2" BorderBrush="#7296a4" Margin="35 0 35 0" Height="40" VerticalAlignment="Center">
+                        <TextBox x:Name="txtDroneModel" Padding="10 0 10 0" VerticalAlignment="Center" FontSize="16" Background="Transparent"
+                                 FontFamily="Century Gothic" HorizontalAlignment="Left" Width="280" BorderThickness="0"/>
+                    </Border>
+                    <!-- Service Problem-->
+                    <TextBlock Text="Service Problem" FontSize="14" Margin="35 10 35 0" FontFamily="Century Gothic" FontStyle="Italic"/>
+                    <Border BorderThickness="2" BorderBrush="#7296a4" Margin="35 0 35 0" Height="100" VerticalAlignment="Center">
+                        <TextBox x:Name="txtServiceProblem" Padding="10 0 10 0" VerticalAlignment="Center" FontSize="16" Background="Transparent"
+                                 FontFamily="Century Gothic" HorizontalAlignment="Left" Width="280" BorderThickness="0" Height="100"
+                                 TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
+                    </Border>
+                    <!-- Service Priority-->
+                    <StackPanel Orientation="Horizontal" Margin="35 15 35 0">
+                        <TextBlock Text="Priority" FontSize="14" FontFamily="Century Gothic" FontStyle="Italic"/>
+                        <StackPanel Orientation="Vertical" Margin="20 0 0 0">
+                            <RadioButton x:Name="btnRegular" GroupName="Priority" Margin="50 0 0 0" FontSize="16" FontFamily="Century Gothic" ClickMode="Press" RenderTransformOrigin="1,0">Regular</RadioButton>
+                            <RadioButton x:Name="btnExpress" GroupName="Priority" Margin="50 10 0 0" FontSize="16" FontFamily="Century Gothic">Express</RadioButton>
+                        </StackPanel>
+                    </StackPanel>
+                    <!-- Add Drone Button -->
+                    <Button x:Name="btnAddDrone" Content="Add Drone" FontSize="18" FontWeight="Bold" Margin="35 20 35 0" Height="45" Style="{StaticResource ChangeHoverColor}"
+                            FontFamily="Century Gothic" BorderThickness="0" Cursor="Hand"/>
+                </StackPanel>
+            </Border>
+            
+            
+            <!-- Center Panel: Regular List -->
+            <Border Grid.Column="1" Grid.Row="0" CornerRadius="25" Margin="20,10,20,0">
+                <StackPanel Margin="0,20,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Regular Service Queue" FontSize="24" FontWeight="Bold" Margin="30 30 0 20" Foreground="#312f2f" HorizontalAlignment="Left"/>
+                        <Button x:Name="btnMarkCompleteReg" Content="Completed" FontSize="14" Margin="150 30 0 20" Height="30" Width="150"
+                                FontFamily="Century Gothic" BorderThickness="0" Cursor="Hand" Style="{StaticResource ChangeHoverColor}"/>
+                    </StackPanel>
+                    <ListView x:Name="lstRegularServices" Margin="30 0 30 30" FontFamily="Century Gothic" FontSize="14" BorderThickness="0" ScrollViewer.CanContentScroll="True">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Tag" Width="100" DisplayMemberBinding="{Binding ServiceTag}" />
+                                <GridViewColumn Header="Client Name" Width="150" DisplayMemberBinding="{Binding ClientName}" />
+                                <GridViewColumn Header="Drone Model" Width="150" DisplayMemberBinding="{Binding DroneModel}" />
+                                <GridViewColumn Header="Service Cost" Width="150" DisplayMemberBinding="{Binding ServiceCost}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+            </Border>
+            <!-- Center Panel: Express List -->
+            <Border Grid.Column="1" Grid.Row="1" CornerRadius="25" Margin="20 0 20 0">
+                <StackPanel Margin="0,10,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Express Service Queue" FontSize="24" FontWeight="Bold" Margin="30 30 0 20" Foreground="#312f2f" HorizontalAlignment="Left"/>
+                        <Button x:Name="btnMarkCompleteExp" Content="Completed" FontSize="14" Margin="150 30 0 20" Height="30" Width="150" Style="{StaticResource ChangeHoverColor}"
+                                FontFamily="Century Gothic" BorderThickness="0" Cursor="Hand"/>
+                    </StackPanel>
+                    <ListView x:Name="lstExpressServices" Margin="30 0 30 30" FontFamily="Century Gothic" FontSize="14" BorderThickness="0" ScrollViewer.CanContentScroll="True">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Tag" Width="100" DisplayMemberBinding="{Binding ServiceTag}" />
+                                <GridViewColumn Header="Client Name" Width="150" DisplayMemberBinding="{Binding ClientName}" />
+                                <GridViewColumn Header="Drone Model" Width="150" DisplayMemberBinding="{Binding DroneModel}" />
+                                <GridViewColumn Header="Service Cost" Width="150" DisplayMemberBinding="{Binding ServiceCost}" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+            </Border>
+            <!-- Right Panel: Completed List -->
+            
+            <Border Grid.Column="2" Grid.RowSpan="2" CornerRadius="25">
+                <StackPanel>
+                    <Button x:Name="btnCloseApp" Width="15" Height="15" Margin="0,0,5,10" Style="{StaticResource iconApp}" Click="btnExit_Click"
+                            BorderThickness="0">
+                        <Button.Background>
+                            <ImageBrush ImageSource="/Images/close.png" Stretch="Uniform"/>
+                        </Button.Background>
+                    </Button>
+                    <Border CornerRadius="25 25 0 0">
+                        <Border.Background>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#cddee5" Offset="0" />
+                                <GradientStop Color="#9ebecb" Offset="0.8"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <TextBlock Text="Completed Services" FontSize="24" FontWeight="Bold" Margin="30 30 0 20" Foreground="#312f2f" HorizontalAlignment="Left"/>
+                    </Border>
+                    <ListView x:Name="lstCompletedServices" Margin="10 20 10 30" FontFamily="Century Gothic" FontSize="14" BorderThickness="0" ScrollViewer.CanContentScroll="True">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Client Name" Width="150" DisplayMemberBinding="{Binding ServiceTag}" />
+                                <GridViewColumn Header="Cost" Width="100" DisplayMemberBinding="{Binding ClientName}" />
+                                <GridViewColumn Header="">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox IsChecked="{Binding IsPaid}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+            </Border>
+
+
+        </Grid>
+
+    </Border>
 </Window>
